Bug fix in our flexslider CSS, set the carousel of thumbnails next and previous buttons to 10% width so they do not overlap entire thumbnails.

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -9,6 +9,9 @@
 	top: 0;
 	bottom: 0;
 }
+#carousel .flex-direction-nav a{
+	width: 10%;
+}
 .flex-direction-nav a {
 	height: 100%;
 	transition: none;
